syntax = "proto3";

package admin.session;

option go_package = "genproto/admin/sessionpb;adminsessionpb";

service AdminSessionService {
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc UpdateSessionActivity(UpdateSessionActivityRequest) returns (UpdateSessionActivityResponse);
  rpc DeleteSession(DeleteSessionRequest) returns (Empty);
  rpc DeleteAllSessions(DeleteAllSessionsRequest) returns (Empty);
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
  rpc DeleteSessionByID(DeleteSessionByIDRequest) returns (Empty);
}

// ----------------- Update Session Activity -----------------

message UpdateSessionActivityRequest {
  string session_id   = 1;
  string last_seen_at = 2; // RFC3339 timestamp
  bool is_active      = 3;
}

message UpdateSessionActivityResponse {
  Session session     = 1; // Return updated session details
}

// ----------------- Create Session -----------------

message CreateSessionRequest {
  string user_id        = 1;
  bool is_temp     = 2;

  string device_id      = 3;
  string ip_address     = 4;
  string user_agent     = 5;
  string geo_location   = 6;
  string device_metadata = 7;

  bool is_active        = 8;
  map<string, string> extra_data = 9;
  bool is_single_use = 10;
  string purpose = 11;

}

message CreateSessionResponse {
  Session session       = 1;
}

// ----------------- Session Messages -----------------

message Session {
  string id             = 1;
  string user_id        = 2;
  string auth_token     = 3;
  string device_id      = 4;
  string ip_address     = 5;
  string user_agent     = 6;
  string geo_location   = 7;
  string device_metadata = 8;
  bool is_active        = 9;
  string last_seen_at   = 10;
  string created_at     = 11;
  bool is_single_use = 12;
  bool is_used = 13;
  string purpose = 14;
  bool is_temp = 15;
}

// ----------------- Other Session Ops -----------------

message DeleteSessionRequest {
  string token = 1;
}

message DeleteAllSessionsRequest {
  string user_id = 1;
}

message ValidateSessionRequest {
  string token = 1;
}

message ValidateSessionResponse {
  bool valid   = 1;
  string user_id = 2;
  string error  = 3;
  string session_type = 4; // "main", "temporary"
  string purpose = 5;
}

message ListSessionsRequest {
  string user_id = 1;
}

message ListSessionsResponse {
  repeated Session sessions = 1;
}

message DeleteSessionByIDRequest {
  string session_id = 1;
}

message Empty {}
